style: format all Java files